[package]
name = "google-chats-pr-announcer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1.18.5", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
log = "0.4.14"
simple_logger = "2.1.0"
anyhow = "1.0.53"
getset = "0.1.2"
chrono = { version = "0.4.19", features = ["serde"] }